# project-business-decisions-taranahl-uw

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  explore_kalshi.ipynb  project.ipynb  pyproject.toml
auxiliary/: kalshi.py  plots.py  polymarket.py  predictions.py  simulator.py  tables.py
tests/: test_imports.py
