[project]
name = "student-project"
version = "0.1.0"
description = "NBA Prediction Market Simulator — live Kalshi data, logit random walk, Monte Carlo fan charts, ML outcome prediction, and cross-platform Polymarket analysis"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["auxiliary"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
